[gd_scene format=3]

[ext_resource type="Script" path="res://Scripts/Battle/Units/unit_sprite_3d.gd" id="1"]

[sub_resource type="QuadMesh" id="1"]
size = Vector2(0.8, 1.2)

[sub_resource type="StandardMaterial3D" id="2"]
albedo_color = Color(0.4, 0.7, 0.4, 1)

[sub_resource type="CapsuleShape3D" id="3"]
radius = 0.4
height = 1.4

[sub_resource type="CylinderMesh" id="4"]
top_radius = 0.55
bottom_radius = 0.55
height = 0.04

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(0.2, 0.8, 0.5, 0.9)

[sub_resource type="SphereMesh" id="6"]
radius = 0.12
height = 0.24

[sub_resource type="StandardMaterial3D" id="7"]
albedo_color = Color(0.3, 1.0, 0.6, 1.0)

[node name="UnitSprite3D" type="Node3D"]
script = ExtResource("1")
team = 0
unit_id = 0

[node name="BaseRing" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
material_override = SubResource("5")
mesh = SubResource("4")

[node name="Sprite" type="MeshInstance3D" parent="."]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0.6, 0)
material_override = SubResource("2")
mesh = SubResource("1")

[node name="TeamIcon" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
material_override = SubResource("7")
mesh = SubResource("6")

[node name="ClickArea" type="Area3D" parent="."]
input_ray_pickable = true
collision_layer = 1
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClickArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("3")
